# travel_recommender

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  dev_server.py  pyproject.toml
backend/data/: regionmodel_description.csv  regionmodel_with_detailed_descriptions.csv  regionmodel_with_generated_descriptions.csv  regionmodel_with_generated_descriptions_v2.csv
backend/scripts/: generate_region_descriptions.py  populate_travel_destination_store.py
backend/scripts/region_description_generation/: __init__.py  agent.py  catalog.py  cli.py  context.py  csv_io.py  paths.py
backend/scripts/travel_destination_population/: __init__.py  cli.py  loader.py  paths.py  runtime.py
backend/src/api/: __init__.py  app.py  dependencies.py  lifecycle.py  main.py
backend/src/api/contracts/: __init__.py  health_dependencies.py  recommendation_service.py  session_service.py  session_store.py
backend/src/api/core/: __init__.py  configuration.py  cors.py  exceptions.py  handlers.py
backend/src/api/routers/: __init__.py  destinations.py  health.py  health_test.py  (+6 more)
backend/src/embeddings/: README.md  __init__.py  configuration.py  loader.py  ollama_text_embedding_model.py  openai_text_embedding_model.py  protocols.py
backend/src/storage/: TODO.md  __init__.py  bootstrap_travel_destinations.py  configuration.py  factory.py  health.py  identifiers.py  identifiers_test.py  storage.py
backend/src/utils/: logger.py  singleton.py
backend/tests/api/: test_configuration.py  test_cors.py  test_health.py  test_recommendations.py  test_sessions.py
(+565 files in other folders)
