[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "langgraph>=1.0.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "uvicorn>=0.37.0",
    "langchain-openai>=1.1.6",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.0",
    "sqlmodel>=0.0.33",
    "langchain-core>=1.2.14",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.2.9",
    "requests>=2.32.3",
    "langchain>=1.3.1",
    "tavily-python>=0.7.24",
    "langchain-community>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender", "src/storage", "src/embeddings"]
